# ConvertExcelToJson

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
core/: main.py
data/: result.json  tempalte_card.xlsx
tests/: conftest.py  test_convert_date_to_string.py  test_file_exists.py  test_get_data_from_excel.py  test_load_workbook_safe.py  test_read_excel_file.py  test_write_to_json_file.py
